--- a/package.json
+++ b/package.json
@@ -38,7 +38,15 @@
     "eslint-config-next": "14.2.5",
     "lint-staged": "^15.2.9",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "yarn lint",
+      "yarn format"
+    ],
+    "*.css": "yarn format"
   }
 }
