--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.52.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.31",
     "next": "14.2.5",
     "nprogress": "^0.2.0",
     "react": "^18",
