--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "yup": "^1.4.0",
