--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
     "@tanstack/react-query": "^5.52.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
+    "mui-one-time-password-input": "^2.0.3",
     "next": "14.2.5",
     "nprogress": "^0.2.0",
     "postgres": "^3.4.4",
