--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
+    "@mui/x-date-pickers": "^7.19.0",
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "formik": "^2.4.6",
