--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "migrate": "drizzle-kit migrate",
-    "generate": "drizzle-kit generate"
+    "generate": "drizzle-kit generate",
+    "drizzle-studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@emotion/cache": "^11.13.1",
