--- a/.github/workflows/staging-ci.yml
+++ b/.github/workflows/staging-ci.yml
@@ -18,13 +18,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install dependencies
         run: yarn install
 
       - name: Run lint-staged
         run: yarn lint-staged
+
+      - name: Mirgate DB
+        run: yarn migrate
 
       - name: Build project
         run: yarn build
