--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.33.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
+    "jsonwebtoken": "^9.0.2",
     "mui-one-time-password-input": "^2.0.3",
     "next": "14.2.5",
     "nprogress": "^0.2.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.52.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
