--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DATABASE_URL=postgresql://username:password@host:port/db_name
 RESEND_API_KEY=re_1234202md
 
 JWT_SECRET=secret
+
+BASE_URL=http://localhost:7070
