--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env*.production
+# env files
+.env*
+!.env.example 
 
 # vercel
 .vercel
