--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.3.31",
     "jsonwebtoken": "^9.0.2",
     "mui-one-time-password-input": "^2.0.3",
+    "mui-tel-input": "^6.0.1",
     "next": "14.2.5",
     "nprogress": "^0.2.0",
     "postgres": "^3.4.4",
