--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.11.12",
     "mui-one-time-password-input": "^2.0.3",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.5",
