--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mui-one-time-password-input": "^2.0.3",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.10",
     "nprogress": "^0.2.0",
     "postgres": "^3.4.4",
     "react": "^18",
