--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material-nextjs": "^5.16.6",
     "@mui/x-date-pickers": "^7.19.0",
     "@react-email/components": "^0.0.25",
+    "@sentry/nextjs": "8",
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
