--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^11.3.31",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.12",
+    "lodash.debounce": "^4.0.8",
     "mui-one-time-password-input": "^2.0.3",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.5",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.52.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
