--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
+    "@mui/x-data-grid": "^7.23.6",
     "@mui/x-date-pickers": "^7.19.0",
     "@react-email/components": "^0.0.25",
     "@sentry/nextjs": "8",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.12",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "mui-one-time-password-input": "^2.0.3",
     "mui-tel-input": "^6.0.1",
     "next": "14.2.5",
