--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.3.0",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "yup": "^1.4.0",
