--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 7070",
     "build": "next build",
-    "start": "next start -p 5040",
+    "start": "NODE_TLS_REJECT_UNAUTHORIZED=0 next start -p 5040",
     "lint": "next lint --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "migrate": "drizzle-kit migrate",
