--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-email/components": "^0.0.25",
     "@sentry/nextjs": "8",
     "@tanstack/react-query": "^5.52.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
