--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
